# network-automation-agents

./: .env.example  .gitignore  COMMANDS.md  Readme.md  SETUP.md  pyproject.toml
docker/: docker-compose.yml
policies/: network_policies.yaml
src/: __init__.py
src/agents/: __init__.py  base.py  config.py
src/agents/compliance/: __init__.py  agent.py  checks.py  models.py  prompts.py  runner.py
src/agents/discovery/: __init__.py  agent.py  analyzers.py  models.py  prompts.py  runner.py
src/agents/execution/: __init__.py  agent.py  models.py  prompts.py  runner.py
src/agents/llm/: __init__.py  base.py  factory.py  gemini_llm.py
src/agents/mcp_client/: __init__.py  client.py
src/agents/policy/: __init__.py  agent.py  models.py  prompts.py  runner.py
src/audit/: __init__.py  cli.py  client.py  logger.py  models.py
src/knowledge_graph/: __init__.py  cli.py  client.py  policies.py  topology.py
src/mcp_server/: __init__.py  config.py  server.py
src/models/: ___init___.py  __init__.py  network.py  policy.py
src/orchestrator/: __init__.py  cli.py  models.py  orchestrator.py  pipeline.py  scheduler.py
src/simulator/: ___init__.py  __init__.py  anomaly_injector.py  log_generator.py  network_sim.py  runner.py  telemetry_generator.py
tests/: __init__.py  conftest.py
tests/test_agents/: __init__.py  test_compliance_agent.py  test_discovery_agent.py  test_execution_agent.py  test_policy_agent.py
tests/test_audit/: test_audit.py
tests/test_knowledge_graph/: __init__.py  test_policies.py  test_topology.py
tests/test_mcp_server/: __init__.py  test_tools.py
tests/test_orchestrator/: test_orchestrator.py
tests/test_simulator/: __init__.py  test_anomaly_injector.py  test_log_generator.py  test_network_sim.py  test_telemetry_generator.py
(+11 files in other folders)
